# ScholarFilter

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
scripts/: run.ps1  run.sh
src/research_pipeline/: __init__.py  config.py  curate.py  keywords.py  pipeline.py
tests/: test_config.py  test_keywords.py
